@@ -7,3 +7,9 @@ Dieses Projekt verwendet aktuell Forks der Bibliotheken:
 - [EuclidView3d](https://github.com/lukashert/EuclidView3d)
 
 Nach Fertigstellung dieses Projektes sollten die Änderungen gemergt werden.
+
+## Execution
+Um die Visualisierung zu verwenden müssen folgende JVM Flags gesetzt werden:
+```
+--add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED 
+```
